VSE: Alpha Under and Over Drop inverted? #41780

Closed
opened 2014-09-11 08:30:13 +02:00 by Leon Cheung · 8 comments
Member

System Information
Win8.1 64bit | GTX680

Blender Version
Broken: 2.71.5 a4c5570

Short description of error
According to the Wiki and what I've seen, The results generated by Alpha Under and Over Drop effect strip seems to be inverted to each other.

Exact steps for others to reproduce the error
Please open the test blend file to check. Thanks. (images are packed, but need to be reloaded) Tell me if I was wrong or Wiki was wrong, since it has been puzzling me for quite long time. :-}

vse_alpha.png
vse_alpha.blend

**System Information** Win8.1 64bit | GTX680 **Blender Version** Broken: 2.71.5 a4c5570 **Short description of error** According to the [Wiki ](http://wiki.blender.org/index.php/Doc:2.4/Manual/Sequencer/Effects#Alpha_Over.2C_Under.2C_and_Over_Drop_Built-in_Effects) and what I've seen, The results generated by Alpha Under and Over Drop effect strip seems to be inverted to each other. **Exact steps for others to reproduce the error** Please open the test blend file to check. Thanks. (images are packed, but need to be reloaded) Tell me if I was wrong or Wiki was wrong, since it has been puzzling me for quite long time. :-} ![vse_alpha.png](https://archive.blender.org/developer/F109860/vse_alpha.png) [vse_alpha.blend](https://archive.blender.org/developer/F109862/vse_alpha.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-09-11 15:49:23 +02:00

Added subscribers: @Psy-Fi, @Sergey

Added subscribers: @Psy-Fi, @Sergey

Alpha under was always rather a creepy thing.. @Psy-Fi, you might want to have a look here.

Alpha under was always rather a creepy thing.. @Psy-Fi, you might want to have a look here.

This issue was referenced by 482354fd6a

This issue was referenced by 482354fd6a9703459bb221a234ddcf28d9742a25

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 482354fd6a.

Closed by commit 482354fd6a.
Author
Member

@Psy-Fi, Hi Antony, Thank you so much for the quick fix! It seems to be a lost feature from 2.4x. One more thing: The newly exposed Default Fade seems not working as the tooltip mentions. Could you also check about it? Thanks!

@Psy-Fi, Hi Antony, Thank you so much for the quick fix! It seems to be a lost feature from 2.4x. One more thing: The newly exposed **Default Fade** seems not working as the tooltip mentions. Could you also check about it? Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41780
No description provided.