Fix related to T41780, sequencer weirdness with alpha under effect

Fix alpha under equation according to porter-duff and user docs that
state that effect should invert he order of channels and reduce to alpha
over when factor is 1.0.

BTW, we don't really expose any factor here...lost feature from 2.49?